[gd_scene load_steps=9 format=3 uid="uid://db3hgx6g8vmhe"]

[ext_resource type="Script" uid="uid://c5rktfg8kh7xg" path="res://scripts/battle/battle_manager.gd" id="1"]
[ext_resource type="Script" uid="uid://cwkwi5euadvxa" path="res://scripts/battle/combat_resolver.gd" id="2"]
[ext_resource type="PackedScene" path="res://scenes/battle/ui/life_bar.tscn" id="3"]
[ext_resource type="PackedScene" path="res://scenes/battle/ui/energy_display.tscn" id="4"]
[ext_resource type="PackedScene" path="res://scenes/battle/lanes/lane_visual.tscn" id="5"]
[ext_resource type="PackedScene" path="res://scenes/battle/ui/hand_area.tscn" id="6"]
[ext_resource type="PackedScene" path="res://scenes/battle/ui/turn_indicator.tscn" id="7"]
[ext_resource type="PackedScene" path="res://scenes/battle/ui/test_controls.tscn" id="8"]

[node name="BattleArena" type="Node2D"]
process_mode = 4
script = ExtResource("1")

[node name="CombatResolver" type="Node" parent="."]
script = ExtResource("2")

[node name="UI" type="CanvasLayer" parent="."]
layer = 10

[node name="BackgroundOverlay" type="ColorRect" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.85)

[node name="EnemyHeader" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 0

[node name="HeaderContainer" type="HBoxContainer" parent="UI/EnemyHeader"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -753.0
offset_top = -31.0
offset_right = -850.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="EnemyPortrait" type="Label" parent="UI/EnemyHeader/HeaderContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Enemy"

[node name="EnemyLifeBar" parent="UI/EnemyHeader/HeaderContainer" instance=ExtResource("3")]
layout_mode = 2
size_flags_horizontal = 3

[node name="EnemyEnergyDisplay" parent="UI/EnemyHeader/HeaderContainer" instance=ExtResource("4")]
layout_mode = 2

[node name="EnemySide" type="HBoxContainer" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -211.0
offset_top = 117.0
offset_right = 929.0
offset_bottom = 417.0
grow_horizontal = 2
theme_override_constants/separation = 10

[node name="Lane1" parent="UI/EnemySide" instance=ExtResource("5")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Lane2" parent="UI/EnemySide" instance=ExtResource("5")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Lane3" parent="UI/EnemySide" instance=ExtResource("5")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Lane4" parent="UI/EnemySide" instance=ExtResource("5")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Lane5" parent="UI/EnemySide" instance=ExtResource("5")]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerHeader" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0

[node name="HeaderContainer" type="HBoxContainer" parent="UI/PlayerHeader"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -748.0
offset_top = -420.0
offset_right = -834.0
offset_bottom = -385.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="PlayerPortrait" type="Label" parent="UI/PlayerHeader/HeaderContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Player"

[node name="PlayerLifeBar" parent="UI/PlayerHeader/HeaderContainer" instance=ExtResource("3")]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerEnergyDisplay" parent="UI/PlayerHeader/HeaderContainer" instance=ExtResource("4")]
layout_mode = 2

[node name="PlayerSide" type="HBoxContainer" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -203.0
offset_top = -585.0
offset_right = 937.0
offset_bottom = -285.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10

[node name="Lane1" parent="UI/PlayerSide" instance=ExtResource("5")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Lane2" parent="UI/PlayerSide" instance=ExtResource("5")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Lane3" parent="UI/PlayerSide" instance=ExtResource("5")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Lane4" parent="UI/PlayerSide" instance=ExtResource("5")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Lane5" parent="UI/PlayerSide" instance=ExtResource("5")]
layout_mode = 2
size_flags_horizontal = 3

[node name="HandArea" parent="UI" instance=ExtResource("6")]
custom_minimum_size = Vector2(0, 240)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
offset_left = -602.0
offset_top = -247.0
offset_right = 598.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 0

[node name="TurnIndicator" parent="UI" instance=ExtResource("7")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -860.0
offset_top = -224.0
offset_right = -660.0
offset_bottom = -124.0
grow_horizontal = 2
grow_vertical = 2

[node name="EndTurnButton" type="Button" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -100.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 0
grow_vertical = 0
text = "End Turn"

[node name="TestControls" parent="UI" instance=ExtResource("8")]
offset_left = 10.0
offset_top = -300.0
offset_right = 200.0
offset_bottom = -10.0
grow_vertical = 0
